force-app/main/default/objects/TVA_CO__Exception__c/fields/TVA_CO__Caused_Exception_Class__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Caused_Exception_Class__c</fullName>
    <label>Caused Exception Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>