force-app/main/default/objects/TVA_CO__Exception__c/fields/TVA_CO__Email_Send__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Send</label>
    <referenceTo>TVA_CO__Email_Send__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>