force-app/main/default/objects/TVA_CO__Exception__c/fields/TVA_CO__Exception__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Exception__c</fullName>
    <label>Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>