force-app/main/default/objects/TVA_CO__Exception__c/fields/TVA_CO__Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>